<resources>
    <string name="app_name">CASDIS REMINDER </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Message List</string>
    <string name="menu_slideshow">Change Password</string>
    <string name="menu_tools">Excel Export</string>
    <string name="menu_share">Erase Excel</string>
    <string name="menu_send">Batch </string>
    <string name="title_activity_main_new">MainNewActivity</string>

    <string name="app_information">CASDIS TAILOR is a great tool for WhatsApp to send text messages and send document.
         \n \n

          </string>
    <string name="title_activity_add_call_doc">AddCallDocActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_call_doc">EditCallDocActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
